--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,24 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/root.css">
+  <title>murselsen | Home </title>
 </head>
 
 <body>
   <div id="app">
-    <h1></h1>
+    <header>
+      <load src="partials/header.html" />
+    </header>
+    <main>
+
+    </main>
+    <footer></footer>
   </div>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
