feat: implement footer component and add footer styles

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,18 @@
       <load src="partials/header.html" />
     </header>
     <main>
-
+      <div class="Home">
+        <div class="Home__content">
+          <h1 class="Home__content-title">Hello, I'm Mursel Sen</h1>
+          <p class="Home__content-description">I'm a software engineer and web developer.</p>
+          <p class="Home__content-description">I love to create beautiful and functional websites.</p>
+          <p class="Home__content-description">Welcome to my personal website!</p>
+        </div>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <load src="partials/footer.html" />
+    </footer>
   </div>
   <script type="module" src="main.js"></script>
 </body>
