Refactor code structure for improved readability and maintainability

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/index.css">
   <title>murselsen | Home </title>
 </head>
 
@@ -18,13 +19,34 @@
       <load src="partials/header.html" />
     </header>
     <main>
-      <div class="Home">
-        <div class="Home__content">
-          <h1 class="Home__content-title">Hello, I'm Mursel Sen</h1>
-          <p class="Home__content-description">I'm a software engineer and web developer.</p>
-          <p class="Home__content-description">I love to create beautiful and functional websites.</p>
-          <p class="Home__content-description">Welcome to my personal website!</p>
+      <div class="container">
+        <div class="content">
+          <div class="content__introduction">
+            <p class="message">Hi all. I am</p>
+            <h1 class="username">Mürsel Şen</h1>
+            <p class="mission">> Junior Full Stack developer</p>
+          </div>
+          <div class="content__link">
+            <p class="message">// find my profile on Github:</p>
+            <p class="code"> <span class="constant">const</span> <span class="variable">github</span> <span>=</span> <a
+                href="https://github.com/murselsen" target="_blank" class="value">"https://github.com/murselsen"</a>
+            </p>
+            <p class="message">// my personal Social Media profiles:</p>
+            <p class="code">
+              <span class="constant">const</span>
+              <span class="variable">instagram</span> <span>=</span>
+              <a href="https://www.instagram.com/35.mursel/" target="_blank"
+                class="value">"https://instagram.com/35.mursel/"</a>
+            </p>
+            <p class="code">
+              <span class="constant">const</span>
+              <span class="variable">linkedin</span> <span>=</span>
+              <a href="https://www.linkedin.com/in/murselsen/" target="_blank"
+                class="value">"https://linkedin.com/in/murselsen/"</a>
+            </p>
+          </div>
         </div>
+        <div class="media"></div>
       </div>
     </main>
     <footer>
