Add random photo display functionality to index.js
- Implemented a function to randomly select and display a photo from a predefined list.
- Added an initial timeout to trigger the photo selection after 1 second.

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,11 @@
             </p>
           </div>
         </div>
-        <div class="media"></div>
+        <div class="media">
+          <div class="profile">
+            <img src="./images/myPhoto/IMG_20250303_145425.jpg" alt="Mürsel Şen" id="myPhoto" class="profile__image" />
+          </div>
+        </div>
       </div>
     </main>
     <footer>
@@ -55,6 +59,7 @@
     </footer>
   </div>
   <script type="module" src="main.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </body>
 
 </html>
