Enhances about page structure and styling
Replaces outdated script reference with a page-specific module.
Improves CSS styling for app layout, including header and footer.
Overhauls sidebar content in the about page with expanded details and
interactive social media/contact links for better user engagement.

--- a/src/about.html
+++ b/src/about.html
@@ -28,7 +28,7 @@
         </footer>
     </div>
     <script type="module" src="main.js"></script>
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/about.js"></script>
 </body>
 
 </html>
