feat: Update Contact page styles, enhance layout, and improve HTML metadata for SEO

--- a/index.html
+++ b/index.html
@@ -1,20 +1,61 @@
-<!DOCTYPE html>
-<html lang="en" data-theme="dark">
-
+<!doctype html>
+<html lang="tr" data-theme="dark">
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
-  <title>murselsen</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width.comice-width, initial-scale=1" />
+
+    <title>Mürsel Şen | Portfolio</title>
+    <meta name="description" content="Mürsel Şen — Yazılım geliştirici, React ve frontend odaklı portföy. Projeler, blog ve iletişim bilgileri.">
+    <meta name="author" content="Mürsel Şen">
+    <meta name="robots" content="index,follow">
+    <meta name="theme-color" content="#0f172a">
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://murselsen.com/">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Mürsel Şen | Portfolio">
+    <meta property="og:description" content="Mürsel Şen — Yazılım geliştirici, React ve frontend odaklı portföy.">
+    <meta property="og:url" content="https://murselsen.com/">
+    <meta property="og:site_name" content="Mürsel Şen">
+    <meta property="og:image" content="https://murselsen.com/og-image.png">
+    <meta property="og:locale" content="tr_TR">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Mürsel Şen | Portfolio">
+    <meta name="twitter:description" content="Mürsel Şen — Yazılım geliştirici, React ve frontend odaklı portföy.">
+    <meta name="twitter:image" content="https://murselsen.com/og-image.png">
+
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
+
+    <!-- Structured data (JSON-LD) -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Mürsel Şen",
+            "url": "https://murselsen.com/",
+            "sameAs": [
+                "https://github.com/murselsen",
+                "https://www.linkedin.com/in/murselsen"
+            ],
+            "jobTitle": "Junior FullStack Developer",
+            "mainEntityOfPage": {
+                "@type": "WebSite",
+                "@id": "https://murselsen.com/"
+            }
+        }
+    </script>
 </head>
-
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-
+<div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
 </body>
-
 </html>
