feat: Enhance Contact form functionality with email submission and reset, update Header component for menu toggle

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width.comice-width, initial-scale=1" />
 
     <title>Mürsel Şen | Portfolio</title>
-    <meta name="description" content="Mürsel Şen — Yazılım geliştirici, React ve frontend odaklı portföy. Projeler, blog ve iletişim bilgileri.">
+    <meta name="description" content="🧑‍💻 Mürsel Şen - Yazılım Geliştirici — MERN Stack Odaklı Full Stack Developer Modern web teknolojileriyle ölçeklenebilir ve performans odaklı uygulamalar geliştiriyorum. Frontend’den backend’e kadar tüm süreçlerde etkin rol alıyor, kullanıcı deneyimini ön planda tutuyorum.">
     <meta name="author" content="Mürsel Şen">
     <meta name="robots" content="index,follow">
     <meta name="theme-color" content="#0f172a">
@@ -16,7 +16,7 @@
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Mürsel Şen | Portfolio">
-    <meta property="og:description" content="Mürsel Şen — Yazılım geliştirici, React ve frontend odaklı portföy.">
+    <meta property="og:description" content="🧑🧑‍💻 Mürsel Şen - Yazılım Geliştirici — MERN Stack Odaklı Full Stack Developer Modern web teknolojileriyle ölçeklenebilir ve performans odaklı uygulamalar geliştiriyorum. Frontend’den backend’e kadar tüm süreçlerde etkin rol alıyor, kullanıcı deneyimini ön planda tutuyorum.">
     <meta property="og:url" content="https://murselsen.com/">
     <meta property="og:site_name" content="Mürsel Şen">
     <meta property="og:image" content="https://murselsen.com/og-image.png">
@@ -25,10 +25,10 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Mürsel Şen | Portfolio">
-    <meta name="twitter:description" content="Mürsel Şen — Yazılım geliştirici, React ve frontend odaklı portföy.">
+    <meta name="twitter:description" content="🧑‍💻 Mürsel Şen - Yazılım Geliştirici — MERN Stack Odaklı Full Stack Developer Modern web teknolojileriyle ölçeklenebilir ve performans odaklı uygulamalar geliştiriyorum. Frontend’den backend’e kadar tüm süreçlerde etkin rol alıyor, kullanıcı deneyimini ön planda tutuyorum.">
     <meta name="twitter:image" content="https://murselsen.com/og-image.png">
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/mquel.svg" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
