Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>Mürsel Şen | Portfolio</title>
     <meta name="description" content="🧑‍💻 Mürsel Şen - Yazılım Geliştirici — MERN Stack Odaklı Full Stack Developer Modern web teknolojileriyle ölçeklenebilir ve performans odaklı uygulamalar geliştiriyorum. Frontend’den backend’e kadar tüm süreçlerde etkin rol alıyor, kullanıcı deneyimini ön planda tutuyorum.">
+    <meta name="keywords" content="Mürsel Şen, yazılım geliştirici, Full Stack Developer, MERN, React, Node.js, JavaScript, web geliştirme, frontend, backend, portfolio">
     <meta name="author" content="Mürsel Şen">
     <meta name="robots" content="index,follow">
     <meta name="theme-color" content="#0f172a">
